--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -6,3 +6,12 @@ ja:
       post:
         title: タイトル
         address: 住所
+
+ja:
+  views:
+    pagination:
+      first: "&laquo; 最初"
+      last: "最後 &raquo;"
+      previous: "&lsaquo; 前"
+      next: "次 &rsaquo;"
+      truncate: "..."
